fdo#52286 fix RTF export of sub/super script font height

(cherry picked from commit 796e9a796603397c79e160610c8541e16dfc4c82)

Conflicts:
	sw/qa/extras/rtfexport/rtfexport.cxx

Change-Id: If71cb6a20842f2fbe8eae94955da2d53842999a4