sw/CppunitTest_sw_subsequent_rtfexport.mk
@@ -58,7 +58,9 @@ $(eval $(call gb_CppunitTest_use_components,sw_subsequent_rtfexport,\
     filter/source/config/cache/filterconfig1 \
     framework/util/fwk \
     i18npool/util/i18npool \
+    package/source/xstor/xstor \
     package/util/package2 \
+    sax/source/expatwrap/expwrap \
     sfx2/util/sfx \
     svl/source/fsstor/fsstorage \
     svtools/util/svt \
